<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">MIDBroadcaster</string>
    <string name="about_app">Broadcast mid files over MIDI</string>

    <string name="receivers_text">MIDI Device: </string>
    <string-array name="receivers">
        <item>"none"</item>
    </string-array>
    <string name="channel_text">Channel:</string>
    <string-array name="channels">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
        <item>"13"</item>
        <item>"14"</item>
        <item>"15"</item>
        <item>"16"</item>
    </string-array>

    <string name="program_text">Program:</string>
    <string name="btnPlay">▶</string>
    <string name="btnPause">⏸</string>
    <string name="btnReturnToStart">⏮</string>
    <string name="monoChannel">Mix to Single Channel</string>
    <string name="defaultMidLabel">Nothing Loaded</string>

</resources>
